<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="action_settings">Settings</string>
    <string name="app_detail">My Nanodegree Apps!</string>
    <string name="spotify_streamer_button_text">SPOTIFY STREAMER</string>
    <string name="scores_app_button_text">SCORES APP</string>
    <string name="library_app_button_text">LIBRARY APP</string>
    <string name="build_it_bigger_button_text">BUILD IT BIGGER</string>
    <string name="xyz_reader_button_text">XYZ READER</string>
    <string name="capstone_button_text">CAPSTONE: MY OWN APP</string>
    <string name="spotify_streamer_message">This button will launch my Spotify Streamer App!</string>
    <string name="scores_app_message">This button will launch my Scores App!</string>
    <string name="library_app_message">This button will launch my Library App!</string>
    <string name="build_it_bigger_message">This button will launch my Build It Bigger App!</string>
    <string name="xyz_reader_message">This button will launch my XYZ Reader App!</string>
    <string name="capstone_message">This button will launch my Capstone App!</string>
</resources>
