<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/main_activity_scrollview"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:text="@string/app_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:textSize="22sp"
            android:id="@+id/app_detail_label" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spotify_streamer_button_text"
            android:id="@+id/spotify_streamer_button"
            android:layout_below="@+id/app_detail_label"
            android:layout_marginTop="35dp"
            android:background="#ff30c4ff"
            android:layout_alignRight="@+id/scores_app_button"
            android:layout_alignEnd="@+id/scores_app_button"
            android:layout_alignLeft="@+id/scores_app_button"
            android:layout_alignStart="@+id/scores_app_button"
            android:onClick="DisplayProjectName" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scores_app_button_text"
            android:id="@+id/scores_app_button"
            android:layout_marginTop="12dp"
            android:background="#ff30c4ff"
            android:layout_below="@+id/spotify_streamer_button"
            android:layout_alignRight="@+id/library_app_button"
            android:layout_alignEnd="@+id/library_app_button"
            android:layout_alignLeft="@+id/library_app_button"
            android:layout_alignStart="@+id/library_app_button"
            android:onClick="DisplayProjectName" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/library_app_button_text"
            android:id="@+id/library_app_button"
            android:background="#ff30c4ff"
            android:layout_below="@+id/scores_app_button"
            android:layout_marginTop="12dp"
            android:layout_alignRight="@+id/build_it_bigger_button"
            android:layout_alignEnd="@+id/build_it_bigger_button"
            android:layout_alignLeft="@+id/build_it_bigger_button"
            android:layout_alignStart="@+id/build_it_bigger_button"
            android:onClick="DisplayProjectName" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/build_it_bigger_button_text"
            android:id="@+id/build_it_bigger_button"
            android:layout_marginTop="12dp"
            android:background="#ff30c4ff"
            android:layout_below="@+id/library_app_button"
            android:layout_alignRight="@+id/xyz_reader_button"
            android:layout_alignEnd="@+id/xyz_reader_button"
            android:layout_alignLeft="@+id/xyz_reader_button"
            android:layout_alignStart="@+id/xyz_reader_button"
            android:onClick="DisplayProjectName" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xyz_reader_button_text"
            android:id="@+id/xyz_reader_button"
            android:layout_marginTop="12dp"
            android:background="#ff30c4ff"
            android:layout_below="@+id/build_it_bigger_button"
            android:layout_alignRight="@+id/capstone_button"
            android:layout_alignEnd="@+id/capstone_button"
            android:layout_alignLeft="@+id/capstone_button"
            android:layout_alignStart="@+id/capstone_button"
            android:onClick="DisplayProjectName" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capstone_button_text"
            android:id="@+id/capstone_button"
            android:layout_marginTop="12dp"
            android:background="#ff5fff69"
            android:layout_below="@+id/xyz_reader_button"
            android:layout_centerHorizontal="true"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:onClick="DisplayProjectName"
            android:textColor="#fc000000" />
    </RelativeLayout>
</ScrollView>